# bareASGI-static

./: .gitignore  README.md  mkdocs.yml  punch_config.py  pyproject.toml  requirements.txt  setup.py  versions.json
3.0/: 404.html  index.html
3.0/api/bareasgi_static/: index.html
3.0/user-guide/installation/: index.html
3.0/user-guide/usage/: index.html
4.0/: 404.html  index.html
4.0/api/bareasgi_static/: index.html
4.0/user-guide/installation/: index.html
4.0/user-guide/usage/: index.html
bareasgi_static/: __init__.py  file_streaming.py  static_files_provider.py
docs/: 404.html  Makefile  api.rst  conf.py  index.html  index.md  index.rst  make.bat  sitemap.xml
docs/api/: bareasgi_static.md
docs/api/bareasgi_static/: index.html
docs/search/: search_index.json
docs/user-guide/: installation.md
docs/user-guide/installation/: index.html
docs/user-guide/usage/: index.html
documentation/user-guide/: installation.md  usage.md
examples/: alt_mount_point.py  file_stream.html  file_stream.py  simple.py  static_files.py
examples/alt_mount_point_www/: index.html
examples/simple_www/: hello.html
examples/www/: index.html
examples/www/folder/: other.html
latest/api/bareasgi_static/: index.html
src/bareasgi_static/: __init__.py  file_streaming.py  static_files.py  static_files_provider.py
stable/api/bareasgi_static/: index.html
stable/user-guide/installation/: index.html
stable/user-guide/usage/: index.html
tests/: test_file_streaming.py
