[tool.poetry]
name = "bareASGI-static"
version = "3.0.2"
description = "Static file support for bareASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_static" },
]
repository = "https://github.com/rob-blackbourn/bareASGI-static"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.6"
bareASGI = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
hypercorn = "^0.11"
uvloop = "^0.15.0"
pylint = "^2.3"
mypy = "^0.720.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.6"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
