[tool.poetry]
name = "bareASGI-static"
version = "4.0.0-alpha.0"
description = "Static file support for bareASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_static" },
]
repository = "https://github.com/rob-blackbourn/bareASGI-static"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.7"
bareASGI = "^4.0.0-alpha.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
hypercorn = "^0.11"
uvloop = "^0.15"
pylint = "^2.9"
autopep8 = "^1.5"
mypy = "^0.910"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"
types-aiofiles = "^0.1.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
